--- a/.github/workflows/selenium-bdd.yml
+++ b/.github/workflows/selenium-bdd.yml
@@ -4,10 +4,10 @@ name: Selenium BDD Pipeline
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-test:
